7.x-1.13.4
----------
 - #1846 Adds a hook_update to exclude the data dictionary field from using the markdown toolbar. 
 - #1813 Update the groups page view to sort alphabetically rather than by post date.
 - NuCivic/recline#89 Only load previews for resources using files; API/website links should always display iframe.
 - #1841 Fixed mis-named function on dkan_dataset_content_types.api.php
 - #1814 Update dkan_workflow_permissions to rebuild permissions on enable/disable.
 - #1810 Stop throwing exception on tables with only numeric columns, to prevent preview breaking.
 - #1834 Use last day of year (December 31) for 4 digits end year during temporal POD field import.
 - #1832 Fallback to modified date for field_harvest_source_issued if not available during POD Harvest.
 - #1828 Field Frequency Harvest POD integration is missing support for "irregular" value.
 - #1820 Use "accessURL" during resources harvest if "downloadURL" field is not available.
 - #1857 Fixed publishing options not accessible when dkan_workflow is enabled. 

7.x-1.13.3-RC1
--------------
 - #1810 Stop throwing exception on tables with only numeric columns, to prevent preview breaking.
 - #1829 Fixed missing properties on warning message during datajson harvest cache.
 - #1802 Better support for Issued and Updated dataset properties from harvested sources.
 - #1821 Remove redundant CSS load in dkan_dataset.
 - #1726 Fixed broken links in search results to nodes without aliases
 - #1792 Remove Windows reserved characters from default content filenames for better Windows support
 - #1815 Support importing Temporal Coverage during POD Harvest.
 - #1785 Fix error messages when installing DKAN with the UI.
 - #1786 Remove horizontal tab field from the group content type, fix margin on group block.
 - #1786 Add hook to auto-assign editors the og administrator role.