@@ -5,7 +5,7 @@ package = DKAN Workflow
 dependencies[] = features
 dependencies[] = features_roles_permissions
 features[features_api][] = api:2
-features[roles_permissions][] = Workflow Moderator
 features[roles_permissions][] = Workflow Contributor
+features[roles_permissions][] = Workflow Moderator
 features[roles_permissions][] = Workflow Supervisor
 project path = profiles/dkan/modules/dkan/dkan_workflow/modules
